# personal-ai-employee

./: .env.example  .gitignore  CLAUDE.md  README.md  ecosystem.config.js  pyproject.toml
.claude/: settings.json
.claude/skills/: classify_message.md  draft_linkedin_post.md  reasoning_loop.md  update_dashboard.md
src/: gmail_auth_setup.py  linkedin_auth_setup.py  orchestrator.py  scheduler.py
src/watchers/: filesystem_watcher.py  gmail_watcher.py  news_watcher.py  whatsapp_watcher.py
vault_template/: Company_Handbook.md  Dashboard.md
vault_template/Drop_Here/: example_thought.md
